--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 --==CHANGELOG for XMC Server Script==--
 
---v1.5 (22-06-2017):
+--v1.5 (26-06-2017):
+    -Made -b, -s, -r and -a so they can be ran without adding arguments
     -Changed format on how to save the 'worlds' and 'announce_messages'
     -Added a new check server command which tells you whether the server
      is running or not and it shows the last 20 lines of the server screen
